-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P1
-
Affects Version/s: 9
-
Component/s: hotspot
-
b105
-
generic
-
generic
-
Verified
This is a shadow bug for GRAAL-59.
- relates to
-
JDK-8149340 Crash with "assert(thread->deopt_mark() == 0i64) failed: no stack overflow from deopt blob/uncommon trap"
-
- Closed
-
-
JDK-8181855 [Graal] runtime/ReservedStack/ReservedStackTest.java triggers: assert(thread->deopt_mark() == __null) failed: no stack overflow from deopt blob/uncommon trap
-
- Resolved
-